--- a/Framework/Framework.vcxproj.filters
+++ b/Framework/Framework.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="BaseApp.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="GLFWEvent.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -36,6 +39,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="GLFWCallbacks.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="GLFWEvent.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
