--- a/ant_vr_sdk/ant_vr_sdk.vcxproj
+++ b/ant_vr_sdk/ant_vr_sdk.vcxproj
@@ -66,7 +66,10 @@
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
-  <PropertyGroup />
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+    <IncludePath>../extern/glew-2.0.0/include;../extern/glfw-3.2.1/include;../extern/glm;../Framework;$(IncludePath)</IncludePath>
+    <LibraryPath>../extern/glew-2.0.0/lib/x64;../extern/glfw-3.2.1/lib;../debug;$(LibraryPath)</LibraryPath>
+  </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <PrecompiledHeader>
