--- a/ant_vr_sdk/ant_vr_sdk.vcxproj
+++ b/ant_vr_sdk/ant_vr_sdk.vcxproj
@@ -148,6 +148,7 @@
     <ClCompile Include="PostProcessingBloomSetup.cpp" />
     <ClCompile Include="PostProcessingCombinePass.cpp" />
     <ClCompile Include="PostProcessingDownsample.cpp" />
+    <ClCompile Include="PostProcessingFXAA.cpp" />
     <ClCompile Include="PostProcessingGaussBlur.cpp" />
     <ClCompile Include="PostProcessing.cpp" />
     <ClCompile Include="PostProcessingFramework.cpp" />
@@ -165,6 +166,7 @@
     <ClInclude Include="PostProcessingBloomSetup.h" />
     <ClInclude Include="PostProcessingCombinePass.h" />
     <ClInclude Include="PostProcessingDownsample.h" />
+    <ClInclude Include="PostProcessingFXAA.h" />
     <ClInclude Include="PostProcessingGaussBlur.h" />
     <ClInclude Include="PostProcessing.h" />
     <ClInclude Include="PostProcessingFramework.h" />
@@ -178,6 +180,8 @@
     <None Include="assets\DefaultScreenSpacePS.frag" />
     <None Include="assets\DefaultScreenSpaceVS.vert" />
     <None Include="assets\DownsamplePS.frag" />
+    <None Include="assets\fullscreenFXAA.frag" />
+    <None Include="assets\fullscreenFXAA.vert" />
     <None Include="assets\GuassBlurPS_Template.frag" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
