--- a/ant_vr_sdk/ant_vr_sdk.vcxproj.filters
+++ b/ant_vr_sdk/ant_vr_sdk.vcxproj.filters
@@ -106,6 +106,9 @@
     <ClCompile Include="SampleTunnel.cpp">
       <Filter>Samples</Filter>
     </ClCompile>
+    <ClCompile Include="FramebufferGL.cpp">
+      <Filter>Renderer\Texture</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GLSLProgram.h">
@@ -170,6 +173,9 @@
     </ClInclude>
     <ClInclude Include="SampleTunnel.h">
       <Filter>Samples</Filter>
+    </ClInclude>
+    <ClInclude Include="FramebufferGL.h">
+      <Filter>Renderer\Texture</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
