--- a/opengl_study/opengl_study.vcxproj.filters
+++ b/opengl_study/opengl_study.vcxproj.filters
@@ -18,9 +18,15 @@
     <ClCompile Include="heightmap.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="simple_sdk.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="heightmap.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="simple_sdk.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
