--- a/Framework/Framework.vcxproj
+++ b/Framework/Framework.vcxproj
@@ -137,12 +137,14 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BaseApp.h" />
+    <ClInclude Include="GLCapabilities.h" />
     <ClInclude Include="GLFWEvent.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="BaseApp.cpp" />
+    <ClCompile Include="GLCapabilities.cpp" />
     <ClCompile Include="GLFWCallbacks.cpp" />
     <ClCompile Include="GLFWEvent.cpp" />
     <ClCompile Include="stdafx.cpp">
