完成Framebuffer的封装和GLStates大部分功能

--- a/ant_vr_sdk/ant_vr_sdk.vcxproj
+++ b/ant_vr_sdk/ant_vr_sdk.vcxproj
@@ -177,6 +177,7 @@
     <ClInclude Include="GLSLProgram.h" />
     <ClInclude Include="GLStates.h" />
     <ClInclude Include="GLUtil.h" />
+    <ClInclude Include="gl_state_define.h" />
     <ClInclude Include="Numeric.h" />
     <ClInclude Include="NvInputTransformer.h" />
     <ClInclude Include="NvStopWatch.h" />
